--- a/fly.toml
+++ b/fly.toml
@@ -24,10 +24,12 @@ primary_region = "iad"
   protocol = "tcp"
   internal_port = 8080
   processes = ["app"]
-  [services.ports]
+
+  [[services.ports]]
     handlers = ["http"]
     port = 80
-  [services.ports]
+
+  [[services.ports]]
     handlers = ["tls", "http"]
     port = 443
 
